--- a/proyecto/public/index.html
+++ b/proyecto/public/index.html
@@ -3,77 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../src/css/styles.css">
+  <link rel="stylesheet" href="index.css">
   <title>Proyecto con Angel Ipiña</title>
 </head>
 <body>
-  <div class="layout">
-    <!-- Cabecera -->
-    <header class="header">
-      <div class="logo">
-        <div class="play"></div>
-      </div>
-      <h1>MisPelis</h1>
-    </header>
-    <!-- Barra de navegación -->
-    <nav class="nav">
-      <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Películas</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contacto</a></li>
-      </ul>
-    </nav>
-    <!-- Contenido principal -->
-    <section class="content">
-      <!-- aqui van las películas -->
-       <article class="peli-item">
-        <h3 class="title">Desarrollo web</h3>
-        <p class="description">Esta peli habla sobre el desarrollo web</p>
-        <button class="edit">Editar</button>
-        <button class="delete">Borrar</button>
-       </article>
-       <article class="peli-item">
-        <h3 class="title">Desarrollo web</h3>
-        <p class="description">Esta peli habla sobre el desarrollo web</p>
-        <button class="edit">Editar</button>
-        <button class="delete">Borrar</button>
-       </article>
-       <article class="peli-item">
-        <h3 class="title">Desarrollo web</h3>
-        <p class="description">Esta peli habla sobre el desarrollo web</p>
-        <button class="edit">Editar</button>
-        <button class="delete">Borrar</button>
-       </article>
-       <article class="peli-item">
-        <h3 class="title">Desarrollo web</h3>
-        <p class="description">Esta peli habla sobre el desarrollo web</p>
-        <button class="edit">Editar</button>
-        <button class="delete">Borrar</button>
-       </article>
-    </section>
-    <!-- Barra lateral -->
-    <aside class="lateral">
-      <div class="search">
-        <h3 class="title">Buscador</h3>
-        <form>
-          <input type="text" placeholder="Buscar...">
-          <button>Buscar</button>
-        </form>
-      </div>
-      <div class="add">
-        <h3 class="title">Añadir película</h3>
-        <form>
-          <input type="text" aria-placeholder="Título">
-          <textarea placeholder="Desccripción"></textarea>
-          <input type="submit" value="Guardar">
-        </form>
-      </div>
-    </aside>
-    <!-- Pie de página -->
-    <footer class="footer">
-      &copy; Máster en Javascript ES12 y TypeScript
-    </footer>
-  </div>
+  <div id="root"></div>
 </body>
 </html>
